--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
               
               <!-- <a href="https://drive.google.com/file/d/16jbf1oDk4-MWM2pGeaj9GsrOlLah55n7/view?usp=sharing" class="btn btn-common"><i class="icon-paper-clip"></i> Download Resume</a> -->
 
-              <a href="https://drive.google.com/file/d/10K04Js8fvTQsDSfEIjcvN-K9FUn0Chyt/view?usp=sharing"><i class="icon-paper-clip"></i> Download Resume</a>
+              <a href="https://drive.google.com/file/d/10K04Js8fvTQsDSfEIjcvN-K9FUn0Chyt/view?usp=sharing" class="btn btn-common" target="_blank"><i class="icon-paper-clip"></i> Download Resume</a>
 
               <!-- <a href="#" class="btn btn-danger"><i class="icon-speech"></i> Contact Me</a> -->
             </div>
