--- a/index.html
+++ b/index.html
@@ -171,7 +171,9 @@
               <h3>Hi Guys!</h3>
               <br><br>
               <h5> 
-                  I am a pre-final year undergraduate student at Delhi Technological University(DTU). 
+                  I am a final year Computer Science student from Delhi Technological University (Formerly DCE) with a passion
+                  to code and zeal to develop and deliver software.
+                  <!-- I am a Final year undergraduate student at Delhi Technological University (Formerly DCE).  -->
                   I am a full stack web developer, data scientist and an open source enthusiast, 
                   who is working to implement innovation in small things.
                   <br>
@@ -194,9 +196,10 @@
               </div> -->
 
               
-              <!-- <a href="https://drive.google.com/file/d/16jbf1oDk4-MWM2pGeaj9GsrOlLah55n7/view?usp=sharing" class="btn btn-common"><i class="icon-paper-clip"></i> Download Resume</a> -->
+              <!-- <a href="https://drive.google.com/file/d/16jbf1oDk4-MWM2pGeaj9GsrOlLah55n7/view?usp=sharing" class="btn btn-common"><i class="icon-paper-clip"></i> Download Resume</a> -->            
+              <!-- <a href="https://drive.google.com/file/d/10K04Js8fvTQsDSfEIjcvN-K9FUn0Chyt/view?usp=sharing" class="btn btn-common" target="_blank"><i class="icon-paper-clip"></i> Download Resume</a> -->
 
-              <a href="https://drive.google.com/file/d/10K04Js8fvTQsDSfEIjcvN-K9FUn0Chyt/view?usp=sharing" class="btn btn-common" target="_blank"><i class="icon-paper-clip"></i> Download Resume</a>
+              <a href="https://drive.google.com/file/d/1rA6pfbwbn2PI29XWccdaBCKpUDv2-ohe/view?usp=sharing" class="btn btn-common" target="_blank"><i class="icon-paper-clip"></i> Download Resume</a>
 
               <!-- <a href="#" class="btn btn-danger"><i class="icon-speech"></i> Contact Me</a> -->
             </div>
